[gd_scene load_steps=8 format=3 uid="uid://j4ft87o7jk14"]

[ext_resource type="Script" uid="uid://bruqwi63myl1m" path="res://Script/BigPanel/ItemStorePanel.gd" id="1_vx1qn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n03md"]
bg_color = Color(0.85, 0.95, 0.88, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.8, 0.65, 0.9)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 12
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button"]
bg_color = Color(0.75, 0.9, 0.8, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.75, 0.6, 0.8)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 6
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ButtonHover"]
bg_color = Color(0.8, 0.95, 0.85, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.7, 0.5, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ButtonPressed"]
bg_color = Color(0.65, 0.8, 0.7, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.6, 0.4, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.15)
shadow_size = 4
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ScrollBar"]
bg_color = Color(0.8, 0.9, 0.85, 0.7)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="ItemStorePanel" type="Panel"]
offset_left = 58.0
offset_top = 79.0
offset_right = 1598.0
offset_bottom = 799.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_n03md")
script = ExtResource("1_vx1qn")

[node name="TMBackGround" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -184.0
offset_top = -100.0
offset_right = 1571.0
offset_bottom = 804.0
color = Color(0.9, 0.98, 0.92, 0.2)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 15.0
offset_top = 88.0
offset_right = 3799.0
offset_bottom = 1626.0
scale = Vector2(0.4, 0.4)
size_flags_vertical = 3
horizontal_scroll_mode = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ScrollBar")

[node name="Store_Grid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 8

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_right = 1540.0
offset_bottom = 75.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.6, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4)
theme_override_colors/font_outline_color = Color(0.8, 0.95, 0.85, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 42
text = "道具商店"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 1457.5
offset_top = 13.75
offset_right = 1517.5
offset_bottom = 76.75
theme_override_colors/font_color = Color(0.3, 0.5, 0.35, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
text = "X"

[node name="RefreshButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 12.5
offset_top = 12.5
offset_right = 100.5
offset_bottom = 75.5
theme_override_colors/font_color = Color(0.2, 0.5, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
text = "刷新"

[node name="All_Filter" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 217.5
offset_top = 12.5
offset_right = 305.5
offset_bottom = 75.5
theme_override_colors/font_color = Color(0.25, 0.5, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
text = "全部"

[node name="Pet_Filter" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 310.0
offset_top = 13.75
offset_right = 398.0
offset_bottom = 76.75
theme_override_colors/font_color = Color(0.25, 0.5, 0.35, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
text = "宠物"

[node name="Crop_Filter" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 397.5
offset_top = 13.75
offset_right = 485.5
offset_bottom = 76.75
theme_override_colors/font_color = Color(0.2, 0.5, 0.25, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
text = "作物"

[node name="Farm_Filter" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_left = 485.0
offset_top = 13.75
offset_right = 573.0
offset_bottom = 76.75
theme_override_colors/font_color = Color(0.25, 0.5, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_Button")
theme_override_styles/hover = SubResource("StyleBoxFlat_ButtonHover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ButtonPressed")
text = "农场"

[connection signal="pressed" from="RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="All_Filter" to="." method="_on_all_filter_pressed"]
[connection signal="pressed" from="Pet_Filter" to="." method="_on_pet_filter_pressed"]
[connection signal="pressed" from="Crop_Filter" to="." method="_on_crop_filter_pressed"]
[connection signal="pressed" from="Farm_Filter" to="." method="_on_farm_filter_pressed"]
